--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
         {% if user.is_authenticated %}
         <h3>Hello {{ fname }}</h3>
-        <h4>You are successfully logged in</h4>
+        <h4>You are successfully logged in!</h4>
         <button class="btn" type="submit"><a href="./signout">Signout</a></button>
         {% else %}
         <button class="btn" type="submit"><a href="./signin">SignIn</a></button>
